force-app/main/default/objects/VDT_KPI_by_Country__mdt/VDT_KPI_by_Country__mdt.object-meta.xml
<CustomObject>
    <label>VDT KPI by Country</label>
    <pluralLabel>VDT KPI by Countries</pluralLabel>
</CustomObject>