force-app/main/default/objects/VDT_KPI_by_Country__mdt/fields/VDT_Country__c.field-meta.xml
<CustomField>
    <fullName>VDT_Country__c</fullName>
    <label>VDT Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>