force-app/main/default/objects/VDT_KPI_by_Country__mdt/fields/VDT_KPI_Configuration__c.field-meta.xml
<CustomField>
    <fullName>VDT_KPI_Configuration__c</fullName>
    <label>VDT KPI Configuration</label>
    <referenceTo>VDT_KPI_Configuration__mdt</referenceTo>
    <relationshipLabel>VDT KPI by Countries</relationshipLabel>
    <relationshipName>VDT_KPI_by_Countries</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>