force-app/main/default/objects/VDT_KPI_by_Country__mdt/fields/VDT_Target__c.field-meta.xml
<CustomField>
    <fullName>VDT_Target__c</fullName>
    <label>VDT_Target</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>